Fixed unidentified user handles being rendered and tweet content spilling out of container

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -47,4 +47,5 @@
 .content {
   border-bottom: 1px solid lightgrey;
   padding: 30px 15px;
+  word-wrap: break-word;
 }
